--- a/API_practice.ipynb
+++ b/API_practice.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "id": "fbcecd51",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "831a1ead",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "id": "0508e3e2",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "05d127dd",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "32e8ad62",
    "metadata": {},
    "outputs": [
@@ -59,7 +59,7 @@
        "5"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "id": "7ed8faad",
    "metadata": {},
    "outputs": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 7,
    "id": "2b02428e",
    "metadata": {},
    "outputs": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "id": "416eb5a4",
    "metadata": {},
    "outputs": [],
@@ -143,10 +143,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "f4f754e6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=69a5742ec3852cc037ea2b80733d1d63\n"
+     ]
+    }
+   ],
    "source": [
     "# Starting URL for Weather Map API Call.\n",
     "url = \"http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=\" + weather_api_key\n",
@@ -155,10 +163,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "9fe45dba",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "http://api.openweathermap.org/data/2.5/weather?units=Imperial&APPID=69a5742ec3852cc037ea2b80733d1d63&q=Boston\n"
+     ]
+    }
+   ],
    "source": [
     "# Create an endpoint URL for a city.\n",
     "city_url = url + \"&q=\" + \"Boston\"\n",
@@ -167,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 11,
    "id": "127f2bc0",
    "metadata": {},
    "outputs": [
@@ -177,7 +193,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 12,
    "id": "f35a99a1",
    "metadata": {},
    "outputs": [
@@ -200,7 +216,7 @@
        "200"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 13,
    "id": "aeb50e6b",
    "metadata": {},
    "outputs": [
@@ -221,7 +237,7 @@
        "<Response [404]>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -235,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "id": "1f82ab75",
    "metadata": {},
    "outputs": [
@@ -245,7 +261,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,17 +275,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "id": "08641024",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":804,\"main\":\"Clouds\",\"description\":\"overcast clouds\",\"icon\":\"04n\"}],\"base\":\"stations\",\"main\":{\"temp\":30.27,\"feels_like\":30.27,\"temp_min\":25.38,\"temp_max\":35.37,\"pressure\":1036,\"humidity\":84},\"visibility\":10000,\"wind\":{\"speed\":1.99,\"deg\":0,\"gust\":4},\"clouds\":{\"all\":100},\"dt\":1643772962,\"sys\":{\"type\":2,\"id\":2013408,\"country\":\"US\",\"sunrise\":1643716673,\"sunset\":1643752661},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
+       "'{\"coord\":{\"lon\":-71.0598,\"lat\":42.3584},\"weather\":[{\"id\":701,\"main\":\"Mist\",\"description\":\"mist\",\"icon\":\"50n\"},{\"id\":500,\"main\":\"Rain\",\"description\":\"light rain\",\"icon\":\"10n\"}],\"base\":\"stations\",\"main\":{\"temp\":38.55,\"feels_like\":38.55,\"temp_min\":34.68,\"temp_max\":41.45,\"pressure\":1028,\"humidity\":91},\"visibility\":6437,\"wind\":{\"speed\":0,\"deg\":0},\"rain\":{\"1h\":0.25},\"clouds\":{\"all\":100},\"dt\":1643847602,\"sys\":{\"type\":1,\"id\":3486,\"country\":\"US\",\"sunrise\":1643803010,\"sunset\":1643839140},\"timezone\":-18000,\"id\":4930956,\"name\":\"Boston\",\"cod\":200}'"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 16,
    "id": "a727cfeb",
    "metadata": {},
    "outputs": [
@@ -289,33 +305,32 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 804,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04n'}],\n",
+       " 'weather': [{'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50n'},\n",
+       "  {'id': 500, 'main': 'Rain', 'description': 'light rain', 'icon': '10n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 30.27,\n",
-       "  'feels_like': 30.27,\n",
-       "  'temp_min': 25.38,\n",
-       "  'temp_max': 35.37,\n",
-       "  'pressure': 1036,\n",
-       "  'humidity': 84},\n",
-       " 'visibility': 10000,\n",
-       " 'wind': {'speed': 1.99, 'deg': 0, 'gust': 4},\n",
+       " 'main': {'temp': 38.55,\n",
+       "  'feels_like': 38.55,\n",
+       "  'temp_min': 34.68,\n",
+       "  'temp_max': 41.45,\n",
+       "  'pressure': 1028,\n",
+       "  'humidity': 91},\n",
+       " 'visibility': 6437,\n",
+       " 'wind': {'speed': 0, 'deg': 0},\n",
+       " 'rain': {'1h': 0.25},\n",
        " 'clouds': {'all': 100},\n",
-       " 'dt': 1643772962,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'dt': 1643847602,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1643716673,\n",
-       "  'sunset': 1643752661},\n",
+       "  'sunrise': 1643803010,\n",
+       "  'sunset': 1643839140},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -327,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 17,
    "id": "6eff21f5",
    "metadata": {},
    "outputs": [
@@ -351,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 18,
    "id": "c5ac0446",
    "metadata": {},
    "outputs": [
@@ -375,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 19,
    "id": "14906c0d",
    "metadata": {},
    "outputs": [
@@ -393,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 20,
    "id": "12b2dc76",
    "metadata": {},
    "outputs": [
@@ -401,33 +416,32 @@
      "data": {
       "text/plain": [
        "{'coord': {'lon': -71.0598, 'lat': 42.3584},\n",
-       " 'weather': [{'id': 804,\n",
-       "   'main': 'Clouds',\n",
-       "   'description': 'overcast clouds',\n",
-       "   'icon': '04n'}],\n",
+       " 'weather': [{'id': 701, 'main': 'Mist', 'description': 'mist', 'icon': '50n'},\n",
+       "  {'id': 500, 'main': 'Rain', 'description': 'light rain', 'icon': '10n'}],\n",
        " 'base': 'stations',\n",
-       " 'main': {'temp': 30.27,\n",
-       "  'feels_like': 30.27,\n",
-       "  'temp_min': 25.38,\n",
-       "  'temp_max': 35.37,\n",
-       "  'pressure': 1036,\n",
-       "  'humidity': 84},\n",
-       " 'visibility': 10000,\n",
-       " 'wind': {'speed': 1.99, 'deg': 0, 'gust': 4},\n",
+       " 'main': {'temp': 38.55,\n",
+       "  'feels_like': 38.55,\n",
+       "  'temp_min': 34.68,\n",
+       "  'temp_max': 41.45,\n",
+       "  'pressure': 1028,\n",
+       "  'humidity': 91},\n",
+       " 'visibility': 6437,\n",
+       " 'wind': {'speed': 0, 'deg': 0},\n",
+       " 'rain': {'1h': 0.25},\n",
        " 'clouds': {'all': 100},\n",
-       " 'dt': 1643772962,\n",
-       " 'sys': {'type': 2,\n",
-       "  'id': 2013408,\n",
+       " 'dt': 1643847602,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 3486,\n",
        "  'country': 'US',\n",
-       "  'sunrise': 1643716673,\n",
-       "  'sunset': 1643752661},\n",
+       "  'sunrise': 1643803010,\n",
+       "  'sunset': 1643839140},\n",
        " 'timezone': -18000,\n",
        " 'id': 4930956,\n",
        " 'name': 'Boston',\n",
        " 'cod': 200}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -441,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "id": "5f450c0f",
    "metadata": {},
    "outputs": [],
@@ -452,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "id": "348c88b5",
    "metadata": {},
    "outputs": [
@@ -462,7 +476,7 @@
        "'US'"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,17 +487,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 23,
    "id": "418c3850",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1643772962"
+       "1643847602"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 24,
    "id": "b20b3190",
    "metadata": {},
    "outputs": [
@@ -504,7 +518,7 @@
        "42.3584"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,17 +529,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 25,
    "id": "06baa733",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "35.37"
+       "41.45"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 26,
    "id": "59a1aea3",
    "metadata": {},
    "outputs": [
@@ -544,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "42.3584 -71.0598 35.37 84 100 1.99\n"
+      "42.3584 -71.0598 41.45 91 100 0\n"
      ]
     }
    ],
@@ -560,17 +574,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 27,
    "id": "9be45cf4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "datetime.datetime(2022, 2, 2, 3, 36, 2)"
+       "datetime.datetime(2022, 2, 3, 0, 20, 2)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,17 +600,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 28,
    "id": "ea365af1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'2022-02-02 03:36:02'"
+       "'2022-02-03 00:20:02'"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -604,6 +618,62 @@
    "source": [
     "datetime.utcfromtimestamp(date).strftime('%Y-%m-%d %H:%M:%S')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "d4ac7fd7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1643847681.3784866"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Import the time module.\n",
+    "import time\n",
+    "\n",
+    "# Get today's date in seconds\n",
+    "today = time.time()\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "80c6482c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'02/02/22'"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "today = time.strftime(\"%x\")\n",
+    "today"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1eee8b76",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
